--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
 .header__title {
   position: relative;
   width: 730px;
-  left: 64px;
+  padding-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -37,7 +37,7 @@
 
 .header__subtitle {
   position: absolute;
-  width: 388px;
+  max-width: 388px;
   bottom: 30px;
   left: 64px;
   font-size: 18px;
@@ -53,7 +53,6 @@
 
 .header__main-illustration {
   position: absolute;
-  justify-content: end;
   bottom: 0;
   right: 0;
   width: 765px;
@@ -104,15 +103,14 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0;
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragrafh:last-of-type {
+  margin-bottom: 0;
 }
 
 .two-columns__accent {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.accent {
   font-weight: 600;
 }
 
@@ -123,7 +121,7 @@
   position: relative;
 }
 
-.section__title {
+.digits__title {
   width: 60%;
   margin: 0;
   line-height: 1.15;
@@ -133,7 +131,7 @@
   text-align: center;
 }
 
-.section__subtitle {
+.digits__subtitle {
   width: 60%;
   margin-top: 20px;
   margin-bottom: 0;
@@ -174,7 +172,7 @@
 
 .feynman {
   background-color: #f2f2f2;
-  height: 890px;
+  min-height: 790px;
   display: flex;
   margin: 0;
   position: relative;
@@ -187,7 +185,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   z-index: 1;
   margin: 0;
@@ -213,6 +211,7 @@
   top: 50%;
   right: 48px;
   z-index: 3;
+  text-decoration: none;
 }
 
 .feynman__image {
@@ -229,7 +228,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: #000;
+  background-color: #1f1f1f;
   z-index: 0;
   overflow: hidden;
 }
@@ -244,24 +243,25 @@
   z-index: -1;
 }
 
-.table__theme_dark {
-  color: #f2f2f2;
+.table_theme_dark {
+  color: #fff;
 }
 
-.section__title_theme_dark {
+.digits__title_theme_dark {
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  color: #f2f2f2;
   width: 60%;
+  color: #fff;
 }
 
-.section__subtitle_theme_dark {
-  color: #f2f2f2;
+.digits__subtitle_theme_dark {
   line-height: 34px;
+  color: #fff;
   font-size: 24px;
   font-weight: normal;
   width: 60%;
+
 }
 
 .table__cell_theme_dark {
@@ -297,34 +297,46 @@
   justify-content: space-between;
   display: flex;
   position: relative;
-  margin-top: 60px;
-  margin-bottom: 40px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  border: 1px solid red;
 }
 
-.footer__column_copyright {
+.footer__columns.footer__columns_content_copyright {
+  flex-direction: column;
+  justify-content: space-between;
   flex-basis: 711px;
+  padding: 0;
+  border: 1px solid red;
 }
 
 .logo__place_footer {
+  border: 1px solid red;
   width: 228px;
   height: 32px;
-  position: relative;
-  top: 0;
-  left: 0;
+  border: 1px solid red;
 }
 
 .footer__author {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  position: absolute;
-  bottom: 18px;
+
+
+  border: 1px solid red;
+}
+
+.footer__columns.footer__columns_content_info {
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 0;
 }
 
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
+  border: 1px solid red;
 }
 
 .footer__column-links {
@@ -334,19 +346,27 @@
   margin-top: 20px;
   padding: 0;
   margin-bottom: 16px;
+  list-style: none;
+  border: 1px solid red;
 }
 
-.footer__column_content_social {
+.footer__columns.footer__columns_content_social {
   color: #f2f2f2;
+  padding: 0;
+  flex-direction: column;
+  justify-content: flex-start;
+  border: 1px solid red;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  border: 1px solid red;
 }
 
 .footer__column-link {
   list-style: none;
   text-decoration: none;
   color: #f2f2f2;
+  border: 1px solid red;
 }
