--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@
   line-height: 25px;
   font-weight: normal;
   z-index: 7;
+  margin: 0;
 }
 
 .header__link {
@@ -173,7 +174,7 @@
 
 .feynman {
   background-color: #f2f2f2;
-  min-height: 790px;
+  min-height: 890px;
   display: flex;
   margin: 0;
   position: relative;
@@ -235,6 +236,7 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
   color: #2f80ed;
@@ -249,20 +251,11 @@
 }
 
 .section-title_theme_dark {
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  width: 60%;
   color: #fff;
 }
 
 .section-subtitle_theme_dark {
-  line-height: 34px;
   color: #fff;
-  font-size: 24px;
-  font-weight: normal;
-  width: 60%;
-
 }
 
 .table__cell_theme_dark {
@@ -285,12 +278,12 @@
 }
 
 .footer {
-  background-color: #000;
+  background-color: #1f1f1f;
   display: flex;
   margin: 0;
   min-height: 350px;
   justify-content: center;
-  color: #f2f2f2;
+  color: #fff;
 }
 
 .footer__columns {
@@ -316,6 +309,7 @@
 }
 
 .footer__author {
+  margin: 18px 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -345,7 +339,7 @@
 }
 
 .footer__column_content_social {
-  color: #f2f2f2;
+  color: #fff;
   padding: 0;
   flex-direction: column;
   justify-content: flex-start;
@@ -360,6 +354,6 @@
 .footer__column-link {
   list-style: none;
   text-decoration: none;
-  color: #f2f2f2;
+  color: #fff;
   margin: 0;
 }
