--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,7 @@
 
 .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   width: 877px;
   height: 877px;
   color: #2f80ed;
