--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 
 .header__title {
   position: relative;
-  width: 700px;
+  width: 730px;
   padding-left: 64px;
   line-height: 96px;
   font-size: 102px;
@@ -77,7 +77,6 @@
 
 .description {
   padding-top: 100px;
-  padding-bottom: 100px;
   width: 80%;
   margin: auto;
 }
@@ -114,6 +113,43 @@
 
 .two-columns__accent {
   font-weight: 600;
+}
+
+.techniques {
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+ }
+
+.cards {
+  width: 920px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 0 100px;
+  align-self: center;
+}
+
+.cards__item {
+  width: 240px;
+  box-sizing: border-box;
+  margin-top: 60px;
+  text-align: center;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  margin: 0 40px 43px 40px;
+}
+
+.cards__title {
+margin: 0 0 16px 0;
+}
+
+.cards__description {
+margin: 0;
 }
 
 .digits {
