--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -13,6 +23,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .logo_place_header {
@@ -50,6 +61,12 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  opacity: 1;
+}
+
+.header__link:hover {
+  opacity: 0.5;
+  transition: 1s;
 }
 
 .header__main-illustration {
@@ -61,6 +78,11 @@
   z-index: 5;
 }
 
+.rotation {
+  animation: rotation 20s infinite linear;
+
+}
+
 .header__square-pic {
   position: absolute;
   height: 568px;
@@ -69,6 +91,7 @@
   right: 0;
   background-color: #2f80ed;
   z-index: 4;
+
 }
 
 .content {
@@ -282,6 +305,12 @@
   right: 48px;
   z-index: 3;
   text-decoration: none;
+  opacity: 1;
+}
+
+.feynman__link:hover {
+  opacity: 0.5;
+  transition: 1s;
 }
 
 .feynman__image {
@@ -353,6 +382,11 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.5;
+  transition: 1s;
 }
 
 .kaufman {
@@ -457,6 +491,12 @@
 .resources__link {
   width: 270px;
   height: 38px;
+  opacity: 1;
+}
+
+.resources__link:hover {
+  opacity: 0.5;
+  transition: 1s;
 }
 
 .footer__author {
@@ -507,4 +547,10 @@
   text-decoration: none;
   color: #fff;
   margin: 0;
+  opacity: 1;
+}
+
+.footer__column-link:hover {
+  opacity: 0.5;
+  transition: 1s;
 }
